Paragraph-Trenner Fix

--- a/aboutme.html
+++ b/aboutme.html
@@ -52,7 +52,7 @@
             <div class="paragraph-trenner"></div>
             <div class="flex-container">
                 <div class="flex-item4">
-                    <p style="font-size: 30px;">"Video games have entertained me since my childhood. With my website"Forza Horizion 5 Guide" I share my passion the game with other people. I Always play video games with friends or sometimes alone, no matter what platform, game or genre."<br><br>-Joel Erni</p>
+                    <p style="font-size: 30px;">"Video games have entertained me since my childhood. With my website "Forza Horizion 5 Guide" I share my passion the game with other people. I Always play video games with friends or sometimes alone, no matter what platform, game or genre."<br><br>-Joel Erni</p>
                 </div>
                 <div class="flex-item3">
                     <img class="center" src="/images/aboutme.png" width="350px" alt="Image of myself">
@@ -60,8 +60,8 @@
             </div>
             <div class="paragraph-trenner"></div>
             <div>
-                <h2>Favourite car</h2>
-                <h1 class="centere" style="line-height: 1; margin-bottom: 40px;">Honda NSX-R '92</h1>
+                <h2  class="center" >Favourite car</h2>
+                <h1 class="center" style="line-height: 1; margin-bottom: 40px;">Honda NSX-R '92</h1>
                 <div class="flex-container" >
                     <div class="flex-item1" style="margin: auto 1vw;">
                         <img class="center" src="/images/aboutme1.jpg" width="400px">
