--- a/tips.html
+++ b/tips.html
@@ -57,31 +57,32 @@
                     <img src="/images/tips/1.jpg" alt="driving assists" width="70%" style="margin-top: 2em;margin-bottom: 2em;" class="center">
                     <p>When you first get seated in Forza Horizon 5, you might notice that the driving feels a bit odd as you race to the festival. This is because the game has a whole suite of driving assists turned on by default to make playing the game easy and accessible for everyone. However, the number of assists working together to keep you on the road can mean that players who try to take full control of their car end up fighting the assists a bit.</p>
                 </li>
-                <div class="paragraph-trenner"></div>
+                <div class="subparagraph-trenner"></div>
                 <li>
                     <h2>Accolade Points progress the Forza Horizon 5 Horizon Adventure campaign</h2>
                     <img src="/images/tips/2.jpg" alt="campaign" width="70%" style="margin-top: 2em;margin-bottom: 2em;" class="center">
                     <p>Now that you’ve customized your assists and got settled into the driver’s seat, you can crack on with Forza Horizon 5’s new campaign called Horizon Adventure. This campaign adds a little more narrative and purpose to the usual race series seen in previous Forza Horizon titles and lets players choose how and when they tackle different activities. You need to earn Accolade Points to get a Horizon Adventure Chapter unlock which allows you to try out a new activity from a selection across the different event series.</p>
                 </li>
-                <div class="paragraph-trenner"></div>
+                <div class="subparagraph-trenner"></div>
                 <li>
                     <h2>In Forza Horizon 5 you can do whatever you want, when you want</h2>
                     <img src="/images/tips/3.jpg" alt="Flying Car" width="70%" style="margin-top: 2em;margin-bottom: 2em;" class="center">
                     <p>Even with the franchise’s first campaign, Forza Horizon 5 still follows the driving playground philosophy of the previous games and lets you do more or less whatever you want, when you want. Obviously, the Horizon Adventure campaign progression adds some restrictions in what you can access right away but you will quickly unlock a whole host of race series and events.</p>
                 </li>
-                <div class="paragraph-trenner"></div>
+                <div class="subparagraph-trenner"></div>
                 <li>
                     <h2>Declutter Forza Horizon 5 map with map filters</h2>
                     <img src="/images/tips/4.jpg" alt="in-game Map" width="70%" style="margin-top: 2em;margin-bottom: 2em;" class="center">
                     <p>All the different activity and race types in Forza Horizon 5 can cause the map to get pretty cluttered as it gets flooded with bright icons. Make sure you use map filters to get rid of the icons you want to ignore for now by pressing RB on an Xbox Controller to bring up the icon list.</p>
                 </li>
-                <div class="paragraph-trenner"></div>
+                <div class="subparagraph-trenner"></div>
                 <li>
                     <h2>Weather and time of day seriously affect your driving</h2>
                     <img src="/images/tips/5.jpg" alt="driving in rain" width="70%" style="margin-top: 2em;margin-bottom: 2em;" class="center">
                     <p>If you’ve not played a Forza game before, you might be unfamiliar with how much your car’s performance can be hindered by the weather and time of day. Forza Horizon 5 has a day-night cycle, weather, and seasons, all of which come together to affect how your car handles and all these conditions appear in different races.</p>
                 </li>
             </ol>
+            <div class="paragraph-trenner"></div>
         </article>
         <footer>
             <div class="colorramp"></div>
