--- a/tuning.html
+++ b/tuning.html
@@ -47,7 +47,55 @@
             <div class="colorramp"></div>
         </header>
         <article>
-            <h1 class="center">Coming soon</h1>
+            <div class="paragraph-trenner"></div>
+            <h1 class="center">Tuning</h1>
+            <div class="paragraph-trenner"></div>
+            <P>Tuning a car in Forza Horizon 5 grants you nearly limitless possibilities, most of which are extremely subjective and vary wildly depending on a number of factors, including the car you're tuning, the upgrades applied to the car, what you intend to use the car for, and your personal driving preferences.</P>
+            <div class="subparagraph-trenner"></div>
+            <div>
+                <div>
+                    <h2 style="font-family: AmsiBold;">Platform and Handling</h2>
+                    <div style="margin-left: 2em;">
+                        <p style="font-size: 1.25em;">Race Brakes - All Brake tuning options<br>
+                            Race / Drift / Rally Spring and Dampers - All Alignment, Spring, and Damper tuning option<br>
+                            Race Front Antiroll Bar - Front Antiroll Bar tuning option<br>
+                            Race Rear Antiroll Bar - Rear Antiroll Bar tuning option<br>
+                        </p>
+                    </div>
+                </div>
+                <div class="subparagraph-trenner"></div>
+                <div>
+                    <h2 style="font-family: AmsiBold;">Drivetrain</h2>
+                    <div style="margin-left: 2em;">
+                        <p style="font-size: 1.25em;">
+                            Sport Transmission - Final Drive tuning only<br>
+                            Any Race Transmission - All Gearing tuning options<br>
+                            Sport Differential – Acceleration Differential tuning only<br>
+                            Race / Rally / Offroad / Drift Differentials – All Differential tuning options
+                        </p>
+                    </div>
+                </div>
+                <div class="subparagraph-trenner"></div>
+                <div>
+                    <h2 style="font-family: AmsiBold;">Tyres</h2>
+                    <div style="margin-left: 2em;">
+                        <p style="font-size: 1.25em;">
+                            Any Tire Compound - All Tire tuning options
+                        </p>
+                    </div>
+                </div>
+                <div class="subparagraph-trenner"></div>
+                <div>
+                    <h2 style="font-family: AmsiBold;">Aero and Appearance</h2>
+                    <div style="margin-left: 2em;">
+                        <p style="font-size: 1.25em;">
+                            Adjustable Front Bumper - Front Aero Downforce tuning option<br>
+                            Adjustable Rear Wing - Rear Aero Downforce tuning option
+                        </p>
+                    </div>
+                </div>
+                <div class="paragraph-trenner"></div>
+            </div>
         </article>
         <footer>
             <div class="colorramp"></div>
