--- a/tuning.html
+++ b/tuning.html
@@ -104,18 +104,17 @@
                     <h3>Contact me</h3>
                     <ul>
                         <li><a href="joel_erni1@sluz.ch">send E-Mail</a></li>
-                        <li><a>on Discord</a></li>
-                        <li>Tel.: 079 123 45 67</li>
+                        <li><a href="https://discord.gg/4ctjPXzg">on Discord</a></li>
                     </ul>
                 </div>
                 <div class="footerflex">
                     <h3>Social Media</h3>
                     <ul>
-                        <li><a href="https://www.youtube.com/c/RickastleyCoUkOfficial">Youtube</a></li>
-                        <li><a href="https://www.instagram.com/jeppylino/">Instagram</a></li>
-                        <li><a href="https://discord.gg/4ctjPXzg">Discord</a></li>
-                        <li><a href="https://www.reddit.com/user/Jeppy_">Reddit</a></li>
-                        <li><a href="https://www.linkedin.com/in/joel-erni-745116239/">LinkedIn</a></li>
+                        <li><a href="https://www.youtube.com/c/RickastleyCoUkOfficial" target="_blank">Youtube</a></li>
+                        <li><a href="https://www.instagram.com/jeppylino/" target="_blank">Instagram</a></li>
+                        <li><a href="https://discord.gg/4ctjPXzg" target="_blank">Discord</a></li>
+                        <li><a href="https://www.reddit.com/user/Jeppy_" target="_blank">Reddit</a></li>
+                        <li><a href="https://www.linkedin.com/in/joel-erni-745116239/" target="_blank">LinkedIn</a></li>
                     </ul>
                 </div>
                 <div class="footerflex">
