--- a/news.html
+++ b/news.html
@@ -64,7 +64,7 @@
                         </ul>
                     </div>
                     <div class="flex-item2" style="padding: 2.5%;">
-                        <img class="center" width="500px" height="300px" src="images/aa064041-7e2b-4b90-9ccb-c037866aa7fc.jpeg" alt="Series 6 Upadte Image">
+                        <img class="center" width="500px" height="300px" src="/images/news.jpeg" alt="Series 6 Upadte Image">
                     </div>
                 </div>
                 <iframe width="700vw" height="400vw" src="https://www.youtube.com/embed/8frDfEyL8rw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
