--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                 <iframe src="https://store.steampowered.com/widget/1551360/547831/" frameborder="0" width="800" height="190"></iframe>
             </div>
             <div class="paragraph-trenner"></div>
-            <div class="content center">
+            <div class="content center ani">
                 <h3>Lead breathtaking expeditions across the vibrant and ever-evolving open world landscapes of Mexico with limitless, fun driving action in hundreds of the world’s greatest cars.</h3>
             </div>
             <div>
-                <div class="flex-container">
+                <div class="flex-container ani">
                     <div class="flex-item1">
                         <h2 class="awards-list">The Game Award for <br><span style="font-family: AmsiBoldItalic;">Best Audio Design</span><br>2021</h2>
                     </div>
@@ -79,7 +79,7 @@
                         <h2 class="awards-list">The Game Award for <br><span style="font-family: AmsiBoldItalic;">Innovation in Accessibility</span><br>2021</h2>
                     </div>
                 </div>
-                <div class="flex-container">
+                <div class="flex-container ani">
                     <div class="flex-item1">
                         <h2 class="awards-list">The Game Award for Best <br><span style="font-family: AmsiBoldItalic;">Sports/Racing Game</span><br>2021</h2>
                     </div>
