--- a/map.html
+++ b/map.html
@@ -59,19 +59,23 @@
                 </div>
             </a>
             <div class="paragraph-trenner"></div>
-            <img src="/images/map4k.jpg" style="width: 80em; margin-bottom: 2em;" class="center" alt="High Resolution Map 1">
-            <a href="/images/map4k.jpg" download="ForzaHorizon5Map1HighRes" class="download">
-                <div class="center downloadbtn">
-                    <h2>Download Map<br>8214 x 4651</h2>
-                </div>
-            </a>
+			<div class="ani">
+				<img src="/images/map4k.jpg" style="width: 80em; margin-bottom: 2em;" class="center" alt="High Resolution Map 1">
+            	<a href="/images/map4k.jpg" download="ForzaHorizon5Map1HighRes" class="download">
+					<div class="center downloadbtn">
+						<h2>Download Map<br>8214 x 4651</h2>
+					</div>
+            	</a>
+			</div>
             <div class="paragraph-trenner"></div>
-            <img src="/images/map.jpg" style="width: 80em; margin-bottom: 2em;" class="center" alt="High Resolution Map 2">
-            <a href="/images/map.jpg" download="ForzaHorizon5Map2HighRes" class="download">
-                <div class="center downloadbtn">
-                    <h2>Download Map<br>3840 x 2160</h2>
-                </div>
-            </a>
+			<div class="ani">
+				<img src="/images/map.jpg" style="width: 80em; margin-bottom: 2em;" class="center" alt="High Resolution Map 2">
+            	<a href="/images/map.jpg" download="ForzaHorizon5Map2HighRes" class="download">
+                	<div class="center downloadbtn">
+                    	<h2>Download Map<br>3840 x 2160</h2>
+                	</div>
+            	</a>
+			</div>
         </article>
         <footer>
             <div class="colorramp"></div>
