--- a/news.html
+++ b/news.html
@@ -67,7 +67,7 @@
                         <img class="center" width="500px" height="300px" src="/images/news.jpeg" alt="Series 6 Upadte Image">
                     </div>
                 </div>
-                <iframe width="700vw" height="400vw" src="https://www.youtube.com/embed/8frDfEyL8rw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="ani" width="700vw" height="400vw" src="https://www.youtube.com/embed/8frDfEyL8rw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="paragraph-trenner"></div>
         </article>
