--- a/tuning.html
+++ b/tuning.html
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="subparagraph-trenner"></div>
-                <div>
+                <div class="ani">
                     <h2 style="font-family: AmsiBold;">Drivetrain</h2>
                     <div style="margin-left: 2em;">
                         <p style="font-size: 1.25em;">
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <div class="subparagraph-trenner"></div>
-                <div>
+                <div class="ani">
                     <h2 style="font-family: AmsiBold;">Tyres</h2>
                     <div style="margin-left: 2em;">
                         <p style="font-size: 1.25em;">
@@ -85,7 +85,7 @@
                     </div>
                 </div>
                 <div class="subparagraph-trenner"></div>
-                <div>
+                <div class="ani">
                     <h2 style="font-family: AmsiBold;">Aero and Appearance</h2>
                     <div style="margin-left: 2em;">
                         <p style="font-size: 1.25em;">
