--- a/aboutme.html
+++ b/aboutme.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="paragraph-trenner"></div>
-            <div>
+            <div class="ani">
                 <h2  class="center" >Favourite car</h2>
                 <h1 class="center" style="line-height: 1; margin-bottom: 40px;">Honda NSX-R '92</h1>
                 <div class="flex-container" >
