--- a/cars.html
+++ b/cars.html
@@ -53,6 +53,20 @@
                 <div class="paragraph-trenner"></div>
             </div>
             <div>
+                <form class="center">
+                    <label for="type">Sort by</label>
+                    <select name="type" id="cars">
+                        <option value="speed">Speed</option>
+                        <option value="handling">handling</option>
+                        <option value="acceleration">acceleration</option>
+                        <option value="launch">launch</option>
+                        <option value="braking">braking</option>
+                        <option value="offroad">offroad</option>
+                    </select>
+                    <input type="submit" value="Submit">
+                </form>
+            </div>
+            <div>
                 <p>There are five types of race in Forza Horizon 5: <span style="font-family: AmsiBold;">road racing, street racing, PR stunts, dirt racing and cross country racing</span>. Each type of race is suited to a certain kind of car, so having a range of vehicles in your collection will help you rack up the victories.</p>
                 <div>
                     <div class="flex-container" style="margin-bottom: 2vw;">
@@ -101,7 +115,7 @@
                     <ul>
                         <li><a href="/aboutme.html">About me</a></li>
                         <li><a href="https://c.tenor.com/_4YgA77ExHEAAAAC/rick-roll.gif" target="_blank">AGB</a></li>
-                        <li><a href="https://c.tenor.com/rUa8MTSuXFEAAAAd/who-cares.gif" target="_blank">Disclaimer</a></li>
+                        <li><a href="/disclaimer.html" target="_blank">Disclaimer</a></li>
                     </ul>
                 </div>
             </div>
