--- a/disclaimer.html
+++ b/disclaimer.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>News</title>
-        <link rel="stylesheet" href="/styles.css">
+        <title>Forza Horizon 5 Guide</title>
+        <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
-        <link rel="shortcut icon" type="image/png" href="/images/icon.png">
+        <link rel="shortcut icon" type="image/png" href="./images/icon.png">
     </head>
     <body>
         <div id="mobile-nav">
@@ -47,29 +47,10 @@
             <div class="colorramp"></div>
         </header>
         <article>
-            <div>
-                <div class="paragraph-trenner"></div>
-                <h1>Forza Horizon 5 Series 6 Update</h1>
-                <h2>Horizon Customs</h2>
-                <div class="paragraph-trenner"></div>
-                <p>Horizon Customs. The focus of the sixth Forza Horizon 5 series is 'Horizon Customs', which celebrates all the various ways players can contribute to FH5 by creating their own creations, including songs and vehicle designs, EventLab Blueprints and photographers. Some of the changes that have come with this playlist festival include:</p>
-                <div class="flex-container">
-                    <div class="flex-item3" style="text-align: left;">
-                        <ul>
-                            <li><h4 style="margin: 1em;">New collectible paint barrels and miniature t-rex dinosaurs scattered all over the world</h4></li>
-                            <li><h4 style="margin: 1em;">Two EventLab Events featured every week</h4></li>
-                            <li><h4 style="margin: 1em;">One Seasonal Championship featuring a custom photo taken by a community member</h4></li>
-                            <li><h4 style="margin: 1em;">Seasonal PR Stunts will now provide Super Wheelspins instead of regular Wheelspins</h4></li>
-                            <li><h4 style="margin: 1em;">Tons of new cosmetics and cars</h4></li>
-                        </ul>
-                    </div>
-                    <div class="flex-item2" style="padding: 2.5%;">
-                        <img class="center" width="500px" height="300px" src="/images/news.jpeg" alt="Series 6 Upadte Image">
-                    </div>
-                </div>
-                <iframe class="ani" width="700vw" height="400vw" src="https://www.youtube.com/embed/8frDfEyL8rw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
             <div class="paragraph-trenner"></div>
+            <h1 class="center">Disclaimer</h1>
+            <div class="paragraph-trenner"></div>
+            <p>Für diese Webseite ist der/die Lernende Joel Erni des BBZW Sursee verantwortlich. Es handelt sich hierbei um eine Testversion. Weder die Lernenden noch andere Personen oder Organisationen übernehmen irgendeine Haftung für die Webseite, Inhalte oder Downloads.</p>
         </article>
         <footer>
             <div class="colorramp"></div>
@@ -102,10 +83,5 @@
             </div>
         </footer>
     </body>
-    <script src="/script.js"></script>
-    <style>
-        li::marker{
-            font-size: 1.5em;
-        }
-    </style>
+    <script src="script.js"></script>
 </html>
