--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             <div class="colorramp"></div>
         </header>
         <article>
+            <h2 class="center"><a class="link" href="/disclaimer.html">Disclaimer</a></h2>
+            <div class="paragraph-trenner"></div>
             <div class="wrap flex-container">
                 <div class="flex-item5 coverflex">
                     <div>
@@ -114,7 +116,7 @@
                     <ul>
                         <li><a href="/aboutme.html">About me</a></li>
                         <li><a href="https://c.tenor.com/_4YgA77ExHEAAAAC/rick-roll.gif" target="_blank">AGB</a></li>
-                        <li><a href="https://c.tenor.com/rUa8MTSuXFEAAAAd/who-cares.gif" target="_blank">Disclaimer</a></li>
+                        <li><a href="/disclaimer.html" target="_blank">Disclaimer</a></li>
                     </ul>
                 </div>
             </div>
